refactor: 자동 발급과 수동 발급 분리